tests/gpu/codegen/cute/dma_copy_swizzle_syntax_fail.co
// RUN: choreo -gs -t cute -arch=sm_90a %s 2>&1 | FileCheck %s

// Test: Invalid swizzle value (256 is not valid)
// CHECK: error: swizzle value must be 128, 64, or 32
__co__ f16 [64, 64] test_invalid_swizzle_256(f16 [64, 16] lhs, f16 [16, 64] rhs) {
  f16 [64, 64] output{0.0f};

  parallel p by 1 : block {
    mc = mma.fill.f32 0.0f;

    lhs_load = dma.copy.swizzle(256) lhs.chunkat(_, _) => shared;
    rhs_load = dma.copy.swizzle(256) rhs.chunkat(_, _) => shared;

    parallel q by 1 : group-4 {
      ma = mma.load.swizzle(128) lhs_load.chunkat(_, _);
      mb = mma.load.swizzle(128) rhs_load.chunkat(_, _);
      mma.row.col mc, ma, mb;
    }

    mma.store mc, output.chunkat(_, _);
  }

  return output;
}

